@@ -1,3 +1,8 @@
+Development Portal (2016-12-01 shi)
+==============================
+Fixed sort icons for publisher countries view with crs column
+
+
 Development Portal (2016-11-30 shi)
 ==============================
 New search2 view text only added
